cluster/apps/vaultwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  labels:
    app.kubernetes.io/name: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vaultwarden
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vaultwarden
    spec:
      containers:
      - name: vaultwarden
        image: vaultwarden/server:1.21.0
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 50m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 200Mi
        ports:
        - name: gui-port
          protocol: TCP
          containerPort: 80
        - name: websocket-port
          protocol: TCP
          containerPort: 3012
        volumeMounts:
        - name: vaultwarden-config
          mountPath: /data
        livenessProbe:
          tcpSocket:
            port: gui-port
          initialDelaySeconds: 30
          timeoutSeconds: 5
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 10
        readinessProbe:
          tcpSocket:
            port: gui-port
          initialDelaySeconds: 30
          timeoutSeconds: 5
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 10
      volumes:
      - name: vaultwarden-config
        persistentVolumeClaim:
          claimName: vaultwarden-config
