cluster/apps/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  labels:
    app.kubernetes.io/name: vaultwarden
spec:
  selector:
    app.kubernetes.io/name: vaultwarden
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
    - name: websocket
      protocol: TCP
      port: 3012
      targetPort: websocket
  type: ClusterIP
